# chad-console

./: README.md  _test_interceptor.py  error_log.txt  error_test.py  first_for.py  my.py  pyproject.toml  test.py  test_input.py  test_script.py
src/chadconsole/: __init__.py  core_interceptor.py  data_analyzer.py  ui_components.py  ui_engine.py
