[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chad-console"
version = "0.1.0"
description = "Intercepts print() and input() calls, routing them to a beautiful dark-mode GUI console."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "m-ali04", email = "[EMAIL_ADDRESS]" },
]
keywords = ["console", "gui", "developer-tools", "pretty-print", "customtkinter", "chad-console"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "customtkinter>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/m-ali04/chad-console"
Repository = "https://github.com/m-ali04/chad-console"
Issues = "https://github.com/m-ali04/chad-console/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chadconsole"]
